edu-goods/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edu-goods-deployment
  namespace: edu-goods
spec:
  replicas: 1  # HPA에 의해 관리될 예정
  selector:
    matchLabels:
      app: edu-goods
  template:
    metadata:
      labels:
        app: edu-goods
    spec:
      containers:
        - name: edu-goods-app
          image: seongjaegreen/edu-goods:v0.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
      imagePullSecrets:
        - name: dockerhub-secret
